# project

./: README.md
baselayout/: README
baselayout/src/: Makefile  headers.h  start-stop-daemon.c
comar/: CMakeLists.txt  INSTALL  TODO
comar-api/: setup.py
comar-api/comar/: __init__.py  network.py  service.py  utility.py
comar/config/: tr.org.pardus.comar.conf  tr.org.pardus.comar.service  tr.org.pardus.comar2.service
comar/docs/en/: types.txt
comar/docs/en/api/: service.txt
comar/docs/en/models/: Disk.Manager.txt  Net.Filter.txt  Net.Link.txt  Net.Stack.txt  Network.Firewall.txt  Network.Link.txt  Network.Stack.txt  System.Service.txt
comar/docs/tr/: activation.txt  database.txt  link.txt  mimari.txt  nedir.txt  types.txt
comar/docs/tr/api/: service.txt
comar/docs/tr/models/: Disk.Manager.txt  Net.Link.txt  Net.Stack.txt  Network.Link.txt  Network.Stack.txt  System.Service.txt
comar/include/: bus.h  config.h  db.h  log.h  loop.h  policy.h  process.h  pydbus.h  script.h  utils.h
comar/models/: Boot.Loader.xml  Boot.Modules.xml  Core.xml  Disk.Manager.xml  Net.Link.xml  Network.Firewall.xml  Network.Link.xml  System.Manager.xml  System.Package.xml  System.Service.xml  System.Settings.xml  Time.Clock.xml  User.Manager.xml  Xorg.Display.xml
comar/modules/: core.py  policy.py
comar/policy/: tr.org.pardus.comar.boot.loader.policy  tr.org.pardus.comar.boot.modules.policy  tr.org.pardus.comar.disk.manager.policy  tr.org.pardus.comar.net.filter.policy  tr.org.pardus.comar.net.link.policy  tr.org.pardus.comar.net.share.policy  tr.org.pardus.comar.net.stack.policy  tr.org.pardus.comar.policy  tr.org.pardus.comar.system.manager.policy  tr.org.pardus.comar.system.package.policy  tr.org.pardus.comar.system.packagehandler.policy  tr.org.pardus.comar.system.service.policy  tr.org.pardus.comar.system.settings.policy  tr.org.pardus.comar.time.clock.policy  tr.org.pardus.comar.user.manager.policy  tr.org.pardus.comar.xorg.display.policy  tr.org.pardus.comar.xorg.driver.policy
comar/src/: bus.c  config.c  db.c  log.c  loop.c  main.c  policy.c  process.c  pydbus.c  script.c  utils.c
comar/tests/: hav.py  run.sh  test.py
comar/tests/example/: apache.py
comar/tools/: comar2to3.py  hav.py
command-not-found-20140818/: AUTHORS  README  tarball.sh
command-not-found-20140818/data/: packages.db
command-not-found-20140818/po/: az.po  command-not-found.pot  da.po  de.po  es.po  fr.po  hr.po  hu.po  it.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po
command-not-found-20140818/src/: command-not-found  generate.py
gfxtheme-pisilinux-install/: Makefile  README  config
gfxtheme-pisilinux-install/data-install/: gfxboot.cfg  languages
gfxtheme-pisilinux-install/fonts/: Makefile
gfxtheme-pisilinux-install/help-install/: Makefile  bg.html  da.html  hu.html  it.html  pl.html  pt.html  sl.html  sv.html  uk.html
gfxtheme-pisilinux-install/po/: bootloader.pot  ca.po  de.po  en.po  es.po  fr.po  hr.po  hu.po  it.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po
gfxtheme-pisilinux-install/src/: Makefile  bsplash.inc  common.inc  (+10 more)
kaptan/: AUTHORS  README  TODO  about.py  setup.py
kaptan-5.0.6/: COPYING  setup.py
mudur/: AUTHORS  ChangeLog  setup.py
package-manager-pds/: setup.py
panda/: AUTHORS  PKG-INFO  README  panda-helper  panda.py  setup.py
panda-kde/: CMakeLists.txt  helper.cpp  helper.h  kcmpanda.actions  panda.cpp  panda.desktop  panda.desktop.template  panda.h  panda_parser.cpp  panda_parser.h
panda-kde/po/: CMakeLists.txt  de.po  en.po  es.po  fr.po  hr.po  hu.po  it.po  nl.po  panda-kde.pot  pl.pl  pl.po  ru.po  sv.po  tr.po  uk.po
panda-kde/tools/: extract-messages.sh
pds/: HELP  PKG-INFO  README  setup.py
pisi/: ChangeLog  PKG-INFO  pisi-cli  setup.py
pisilinux-python/: MODULES  README  setup.py
quickformat/: AUTHORS  README  TODO
release-notes/: de.po  es.po  hr.po  nl.po  releasenotes-de.html  releasenotes-es.html  releasenotes-hr.html  releasenotes-nl.html  releasenotes-ru.html  releasenotes-tr.html  releasenotes-uk.html  releasenotes.pot  ru.po  template.html  template.html~  tr.mo  tr.po  uk.po
release-notes-1.0/: es.po  hr.po  nl.po  releasenotes.pot  uk.po
yali/: setup.py
yali-3.0.0/: TODO-I18N  setup.py  yali-bin
yali-branding-pisilinux/: release.xml.in  setup.py
yali-theme-pisilinux/: setup.py
(+689 files in other folders)
